Bug 126717 - Formcontrols: TransferTarget isn't shown with underlining Character on Labelcontrol, Button ...
Summary: Formcontrols: TransferTarget isn't shown with underlining Character on Labelc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: GTK3 GTK2
  Show dependency treegraph
 
Reported: 2019-08-06 07:06 UTC by Robert Großkopf
Modified: 2019-08-07 09:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Have a look at the form. '~o' doesn't underline 'o' for transfer target. (16.93 KB, application/vnd.oasis.opendocument.text)
2019-08-06 07:06 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2019-08-06 07:06:31 UTC
Created attachment 153157 [details]
Have a look at the form. '~o' doesn't underline 'o' for transfer target.

Open the attached document.

You could set transfer targets to a formcontrol by writing down a '~' in front of one character. So you could jump to the control with ALT + character. Works also with buttons.

There is written "Labelc~ontrol" in the attachment for the label of the input-field. There is no underline for the shortcut, which will work in forms with ALT+o.

This worked in older LO-versions. Can't install older versions than LO 5.1.5.2 here. There it doesn't work, but works in AOO 4.1.6, for example.

Tested with OpenSuse 15 64bit rpm Linux.
Comment 1 Xisco Faulí 2019-08-06 10:30:26 UTC
This is not a regression. It does work in gen

Version: 6.4.0.0.alpha0+
Build ID: 967644f09b8b7abe3b86d1647820f14e0196f8b4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

but not in gtk/gtk3
Comment 2 Caolán McNamara 2019-08-06 16:33:05 UTC
This is probably due to the automnemonic thing in gtk where, for the normal UI elements anyway, the underline is only shown when Alt is pressed. I imagine that code isn't able to see these form controls so the underline never appears
Comment 3 Caolán McNamara 2019-08-07 08:21:25 UTC
we could turn showing accelerators on for such uno controls, like https://gerrit.libreoffice.org/#/c/77085/ and that works in this case and is possibly sufficient in the general case
Comment 4 Commit Notification 2019-08-07 09:19:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2f9d71b571fa8cb66b3af0b1b8e1ad6c032cb538%5E%21

Resolves: tdf#126717 default that formcontrols show accelerators

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-08-07 09:21:29 UTC
Lets try that in master and see if its sufficient