Resolves: tdf#126717 default that formcontrols show accelerators

Change-Id: I755cb19d08ae2a2036a86422d2e455c1033a54df
Reviewed-on: https://gerrit.libreoffice.org/77085
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>